# docs/swagger.yaml
@@ -9,34 +9,43 @@ definitions:
     - password
     - username
     type: object
+  model.Role:
+    properties:
+      role_code:
+        description: 角色编码
+        type: string
+      role_id:
+        description: 用户ID
+        type: integer
+      role_name:
+        description: 角色名称
+        type: string
+    type: object
   model.User:
     properties:
       avatar:
         description: 头像地址
         type: string
-      createtime:
-        description: 创建时间
+      email:
+        description: 邮箱
         type: string
-      gradeid:
-        description: 班级ID
-        type: integer
-      id:
-        description: 用户ID
-        type: integer
-      isdeleted:
-        description: 逻辑删除 0未删除 1已删除
-        type: integer
       password:
         description: 密码
+        type: string
+      phone:
+        description: 手机号
         type: string
       realname:
         description: 真实姓名
         type: string
-      roleid:
+      role_id:
         description: 角色ID
         type: integer
       status:
         description: 状态 1正常0禁用
+        type: integer
+      user_id:
+        description: 用户ID
         type: integer
       username:
         description: 用户名
@@ -82,6 +91,183 @@ paths:
       summary: 用户登录
       tags:
       - 用户认证
+  /api/roles:
+    delete:
+      description: 根据ID删除角色
+      parameters:
+      - description: 角色ID
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 删除角色
+      tags:
+      - 角色管理
+    get:
+      description: 根据ID查询角色
+      parameters:
+      - description: 角色ID
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Role'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 查询角色
+      tags:
+      - 角色管理
+    post:
+      consumes:
+      - application/json
+      description: 新增一个角色
+      parameters:
+      - description: 角色信息
+        in: body
+        name: role
+        required: true
+        schema:
+          $ref: '#/definitions/model.Role'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Role'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 新建角色
+      tags:
+      - 角色管理
+    put:
+      consumes:
+      - application/json
+      description: 根据ID更新角色信息
+      parameters:
+      - description: 角色ID
+        in: query
+        name: id
+        required: true
+        type: integer
+      - description: 角色信息
+        in: body
+        name: role
+        required: true
+        schema:
+          $ref: '#/definitions/model.Role'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Role'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 更新角色
+      tags:
+      - 角色管理
+  /api/roles/bind:
+    get:
+      description: 根据用户id查询所有角色id
+      parameters:
+      - description: 用户ID
+        in: query
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              type: integer
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 查询用户绑定角色id
+      tags:
+      - 角色管理
   /api/users:
     delete:
       description: 根据ID删除用户
@@ -118,13 +304,13 @@ paths:
       tags:
       - 用户管理
     get:
-      description: 根据ID查询用户
+      description: 根据用户名查询
       parameters:
-      - description: 用户ID
+      - description: 用户名
         in: query
-        name: id
+        name: username
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
