# internal/api/routes.go
@@ -12,10 +12,25 @@ func RegisterUserRoutes(api *gin.RouterGroup) {
 	userGroup := api.Group("/users")
 	userGroup.Use(middleware.JWTAuth())
 	{
-		userGroup.POST("", handler.CreateUser)
-		userGroup.GET("", handler.GetUser)
-		userGroup.PUT("", handler.UpdateUser)
-		userGroup.DELETE("", handler.DeleteUser)
+		userGroup.POST("", CreateUser)
+		userGroup.GET("", GetUser)
+		userGroup.PUT("", UpdateUser)
+		userGroup.DELETE("", DeleteUser)
+	}
+}
+
+// RegisterRoleRoutes 注册角色相关的路由
+func RegisterRoleRoutes(api *gin.RouterGroup) {
+	roleGroup := api.Group("/roles")
+	roleGroup.Use(middleware.JWTAuth())
+	{
+		roleGroup.POST("", CreateRole)
+		roleGroup.GET("", GetRole)
+		roleGroup.PUT("", UpdateRole)
+		roleGroup.DELETE("", DeleteRole)
+	}
+	{
+		roleGroup.GET("/bind", GetUserBindRole)
 	}
 }
 
